fix wish list page layout issue, start working on wish list functionalities

--- a/src/pages/WishList/components/WishList_components.css
+++ b/src/pages/WishList/components/WishList_components.css
@@ -3,18 +3,19 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: start;
+  justify-content: space-evenly;
 }
 
 .wishList__item {
+  margin: 20px auto;
+  width: 300px;
+  height: 300px;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
   border: 1px solid #bbb;
-  margin: 20px auto;
-  height: 220px;
   cursor: pointer;
 }
 
@@ -80,8 +81,8 @@
   position: absolute;
   right: 50px;
   top: 0;
-  width: 30px;
-  height: 30px;
+  width: 30px !important;
+  height: 30px !important;
   padding: 10px;
   background-color: #fff;
 }
@@ -94,8 +95,8 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 30px;
-  height: 30px;
+  width: 30px !important;
+  height: 30px !important;
   padding: 10px;
   background-color: #000 !important;
   color: #fff !important;
@@ -119,11 +120,29 @@
   z-index: 1;
 }
 
+.wishList__cartToolTip {
+  position: absolute;
+  right: 0;
+  top: -40px;
+  padding: 10px;
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 2px 2px rgba(100, 100, 100, 0.5);
+  cursor: pointer;
+  display: none;
+  z-index: 1;
+}
+
 .wishList__addToWishListWrapper:hover > .wishList__toolTip {
   display: block;
 }
 
-@media only screen and (max-width: 630px) {
+.wishList__addToCartWrapper:hover > .wishList__cartToolTip {
+  display: block;
+}
+
+/* @media only screen and (max-width: 630px) {
   .wishList__item {
     width: 100%;
   }
@@ -149,5 +168,10 @@
   }
   .wishList__title {
     font-size: 10px;
+  }
+} */
+@media only screen and (max-width: 1000px) {
+  .wishList__item {
+    width: 400px;
   }
 }
